--- a/src/main/resources/static/css/module-styles.css
+++ b/src/main/resources/static/css/module-styles.css
@@ -3,10 +3,14 @@ body{
 }
 
 .canvas-header {
-
+    text-align: center;
+    border: 3px dashed #f5f5f5bf;
+    border-radius: 30px;
+    padding: 10px 0;
 }
 .canvas-panel{
     margin-top: 70px;
+    display: inline-block;
 }
 
 canvas{
@@ -14,4 +18,46 @@ canvas{
     border-radius: 40px;
     margin-top: 10px;
     cursor: pointer;
+}
+
+#pan, #clear, #rubber{
+    font-size: 14px;
+    font-family: 'Helvetica', sans-serif;
+}
+
+#pan, #clear, #rubber, #line{
+    padding: 5px 10px;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.92);
+    border-radius: 5px;
+    color: #f5f5f5bf;
+    border: 3px solid #f5f5f5bf;
+    margin-left: 10px;
+}
+#pan:hover, #clear:hover, #rubber:hover, #line:hover{
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.selected-border{
+    border: 3px solid #07a207 !important;
+    color: #07a207 !important;
+}
+#line{
+    position: relative;
+}
+
+.description {
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 10px;
+    transition: display 0.5s ease;
+}
+
+#line:hover .description {
+    display: block;
 }
