--- a/src/main/resources/templates/all-tasks.html
+++ b/src/main/resources/templates/all-tasks.html
@@ -17,73 +17,73 @@
     <span class="task-num">Задание №1</span>
     <hr>
     <span>Планиметрия</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(0)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/2/task/1">
     <span class="task-num">Задание №2</span>
     <hr>
     <span>Векторы и операции с ними</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(1)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/3/task/1">
     <span class="task-num">Задание №3</span>
     <hr>
     <span>Стереометрия</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(2)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/4/task/1">
     <span class="task-num">Задание №4</span>
     <hr>
     <span>Начала теории вероятностей</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(3)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/5/task/1">
     <span class="task-num">Задание №5</span>
     <hr>
     <span>Вероятности сложных событий</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(4)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/6/task/1">
     <span class="task-num">Задание №6</span>
     <hr>
     <span>Простейшие уравнения</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(5)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/7/task/1">
     <span class="task-num">Задание №7</span>
     <hr>
     <span>Преобразования и вычисления</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(6)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/8/task/1">
     <span class="task-num">Задание №8</span>
     <hr>
     <span>Производная и первообразная</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(7)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/9/task/1">
     <span class="task-num">Задание №9</span>
     <hr>
     <span>Прикладные задачи</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(8)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/10/task/1">
     <span class="task-num">Задание №10</span>
     <hr>
     <span>Текстовые задачи</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(9)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/11/task/1">
     <span class="task-num">Задание №11</span>
     <hr>
     <span>Графики функций</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(10)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/12/task/1">
     <span class="task-num">Задание №12</span>
     <hr>
     <span>Максимум и минимум функции</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(11)}"></span></span>
 </a>
 
 <div class="part">
@@ -94,43 +94,43 @@
     <span class="task-num">Задание №13</span>
     <hr>
     <span>Уравнения</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(12)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/14/task/1">
     <span class="task-num">Задание №14</span>
     <hr>
     <span>Стереометрическая задача</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(13)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/15/task/1">
     <span class="task-num">Задание №15</span>
     <hr>
     <span>Неравенства</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(14)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/16/task/1">
     <span class="task-num">Задание №16</span>
     <hr>
     <span>Финансовая математика</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(15)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/17/task/1">
     <span class="task-num">Задание №17</span>
     <hr>
     <span>Планиметрическая задача</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(16)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/18/task/1">
     <span class="task-num">Задание №18</span>
     <hr>
     <span>Задача с параметром</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(17)}"></span></span>
 </a>
 <a class="task-container" href="/app/all-tasks/module/19/task/1">
     <span class="task-num">Задание №19</span>
     <hr>
     <span>Числа и их свойства</span>
-    <span class="counter">0/12</span>
+    <span class="counter">0/<span th:text="${map.get(18)}"></span></span>
 </a>
 
 </body>
