база данных изменена с postgres на H2, добавил поле img в Task, косметические изменения в whiteboard

--- a/src/main/resources/static/css/module-styles.css
+++ b/src/main/resources/static/css/module-styles.css
@@ -16,7 +16,10 @@ canvas{
     background-color: white;
     border-radius: 40px;
     margin-top: 10px;
-    cursor: pointer;
+    cursor:pointer;
+}
+.cursor-cross-hair{
+    cursor: crosshair;
 }
 
 #pan, #clear, #rubber{
