--- a/src/main/resources/static/css/module-styles.css
+++ b/src/main/resources/static/css/module-styles.css
@@ -65,18 +65,46 @@ canvas{
 }
 
 .task-container{
+    margin-left: 20px;
     display: inline-block;
-    padding: 40px 60px;
+    padding: 20px 40px;
     border: 2px solid #f5f5f5bf;
     border-radius: 40px;
-    margin-right: 50px;
-    max-height: 40vh;
+    margin-right: 70px;
     width: 550px;
 }
+
 .task, .answer{
     color: #f5f5f5bf;
 }
 .app{
     display: flex;
     margin-top: 80px;
+}
+.label{
+    font-size: 18px;
+    margin-left: 10px;
+}
+
+.placeholder{
+    display: inline-block;
+    height: 220px;
+    width: 220px;
+    border: 1px solid white;
+}
+.task-text{
+    display: inline-block;
+    padding: 10px;
+}
+
+input[type='text']{
+    font-size: 18px;
+    padding-left: 5px;
+    width: 130px;
+    height: 30px;
+    border-radius: 10px;
+    border: 1px solid black;
+}
+input[type='text']:focus{
+    outline: none;
 }
