--- a/src/main/resources/templates/task-template.html
+++ b/src/main/resources/templates/task-template.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/header-styles.css">
     <link rel="stylesheet" href="/css/module-styles.css">
-    <script src="/javascript/whiteboard.js"></script>
+    <script src="/javascript/whiteboard.js" defer></script>
+    <script src="/javascript/task_template_logic.js" defer></script>
     <title th:text="'eazy-ege: Задание ' + ${taskNum} + ' ЕГЭ'"></title>
 </head>
 <body>
@@ -20,16 +21,25 @@
                 <div class="task-text" th:text="${task.getTask()}"></div>
                 <div style="display: flex; margin-top: 10px">
                     <div class="placeholder"></div>
-                    <div>
-                        Ответ:
-                        <input type="text">
-                        <button>Отправить</button>
+                    <div class="user-panel">
+                        <div class="wrapper">
+                            <input placeholder="Введите ответ:" type="text">
+                            <button class="send">Отправить</button>
+                        </div>
                     </div>
+
+
                 </div>
             </div>
-            <div class="answer">
-                <span th:text="${task.getAnswer()}"></span>
+            <div class="answer-wrapper">
+                <button id="show_answer">Показать ответ</button>
+
+                <div id="answer" class="answer display-none">
+                    <hr>
+                    <span th:text="'Ответ: '+ ${task.getAnswer()}"></span>
+                </div>
             </div>
+
         </div>
 
 
