--- a/src/main/resources/static/css/module-styles.css
+++ b/src/main/resources/static/css/module-styles.css
@@ -65,6 +65,7 @@ canvas{
 }
 
 .task-container{
+    position: relative;
     margin-left: 20px;
     display: inline-block;
     padding: 20px 40px;
@@ -72,9 +73,25 @@ canvas{
     border-radius: 40px;
     margin-right: 70px;
     width: 550px;
-    transition: height 0.5s ease;
+    transition: transform 1s ease;
 }
 
+.arrow-left, .arrow-right{
+    position: absolute;
+    top: 40%;
+}
+.rotate-1-right{
+    transform: rotate(1deg);
+}
+.rotate-1-left{
+    transform: rotate(-1deg);
+}
+.arrow-right{
+    left: 595px;
+}
+.arrow-left{
+    left: 10px;
+}
 .task, .answer{
     color: #f5f5f5bf;
 }
@@ -115,6 +132,7 @@ input[type='text']:focus{
     font-size: 18px;
     padding: 6px 20px;
     border-radius: 20px;
+    margin-right: 25px;
 }
 .user-panel{
     margin-left: 30px;
