--- a/src/main/resources/static/css/module-styles.css
+++ b/src/main/resources/static/css/module-styles.css
@@ -3,10 +3,14 @@ body{
 }
 
 .canvas-header {
+    position: fixed;
+    top: 11vh;
+    left: 110vh;
     text-align: center;
     border: 3px dashed #f5f5f5bf;
     border-radius: 30px;
-    padding: 10px 0;
+    padding: 10px 90px;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 .canvas-panel{
     display: inline-block;
@@ -15,7 +19,7 @@ body{
 canvas{
     background-color: white;
     border-radius: 40px;
-    margin-top: 10px;
+    margin-top: 68px;
     cursor:pointer;
 }
 .cursor-cross-hair{
