feature: добавлена функция отмены действия для whiteboard, также действие привязано к правой кнопке мыши bug-fix: canvas-header больше не fixed, так как в таком случае он криво отображается в некоторых браузерах

--- a/src/main/resources/static/css/module-styles.css
+++ b/src/main/resources/static/css/module-styles.css
@@ -3,13 +3,10 @@ body{
 }
 
 .canvas-header {
-    position: fixed;
-    top: 11vh;
-    left: 110vh;
     text-align: center;
     border: 3px dashed #f5f5f5bf;
     border-radius: 30px;
-    padding: 10px 90px;
+    padding: 10px 70px;
     background-color: rgba(0, 0, 0, 0.1);
 }
 .canvas-panel{
@@ -19,19 +16,20 @@ body{
 canvas{
     background-color: white;
     border-radius: 40px;
-    margin-top: 68px;
+    margin-top: 10px;
     cursor:pointer;
 }
 .cursor-cross-hair{
     cursor: crosshair;
 }
 
-#pan, #clear, #rubber, #line, .send{
+#back, #pan, #clear, #rubber, #line, .send{
     font-size: 16px;
     font-family: 'Helvetica', sans-serif;
 }
 
-#pan, #clear, #rubber, #line, .send{
+#back, #pan, #clear, #rubber, #line, .send{
+    user-select: none;
     padding: 5px 15px;
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.92);
@@ -40,7 +38,7 @@ canvas{
     border: 3px solid #f5f5f5bf;
     margin-left: 10px;
 }
-#pan:hover, #clear:hover, #rubber:hover, #line:hover, .send:hover{
+#back:hover, #pan:hover, #clear:hover, #rubber:hover, #line:hover, .send:hover{
     cursor: pointer;
     opacity: 0.8;
 }
@@ -49,7 +47,7 @@ canvas{
     border: 3px solid #07a207 !important;
     color: #07a207 !important;
 }
-#line{
+#line, #back {
     position: relative;
 }
 
@@ -64,7 +62,7 @@ canvas{
     transition: display 0.5s ease;
 }
 
-#line:hover .description {
+#line:hover .description, #back:hover .description{
     display: block;
 }
 
