--- a/src/main/resources/templates/task-template.html
+++ b/src/main/resources/templates/task-template.html
@@ -11,19 +11,7 @@
 </head>
 <body>
 <div th:insert="~{header :: header}"></div>
-<div class="canvas-header">
-    <div id="clear">
-        Очистить
-    </div>
-    <div id="rubber">Стиралка</div>
-    <div id="pan" class="selected-border">
-        Ручка
-    </div>
-    <div id="line">
-        <div class="description">Нажмите по области два раза, точки соединятся линией</div>
-        Линия
-    </div>
-</div>
+
 <div class="app">
 
     <div class="left-block">
@@ -69,6 +57,24 @@
     </div>
 
     <div class="canvas-panel">
+        <div class="canvas-header">
+
+            <div id="pan" class="selected-border">
+                Ручка
+            </div>
+            <div id="rubber">Стиралка</div>
+            <div id="line">
+                <div class="description">Нажмите по области два раза, точки соединятся линией</div>
+                Линия
+            </div>
+            <div id="clear">
+                Очистить
+            </div>
+            <div id="back">
+                <div class="description">Или правая кнопка мыши</div>
+                Отмена
+            </div>
+        </div>
         <canvas id="whiteboard" width="700" height="600">
 
         </canvas>
