feature: панель снова fixed, правильно отображается во всех браузерах

--- a/src/main/resources/templates/task-template.html
+++ b/src/main/resources/templates/task-template.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="canvas-panel">
-        <div class="canvas-header">
+        <div id="canvas_header" class="canvas-header">
 
             <div id="pan" class="selected-border">
                 Ручка
