--- a/src/main/resources/static/css/module-styles.css
+++ b/src/main/resources/static/css/module-styles.css
@@ -3,11 +3,13 @@ body{
 }
 
 .canvas-header {
+    position: fixed;
     text-align: center;
     border: 3px dashed #f5f5f5bf;
     border-radius: 30px;
     padding: 10px 70px;
     background-color: rgba(0, 0, 0, 0.1);
+    margin-left: 2vh;
 }
 .canvas-panel{
     display: inline-block;
@@ -16,7 +18,7 @@ body{
 canvas{
     background-color: white;
     border-radius: 40px;
-    margin-top: 10px;
+    margin-top: 10vh;
     cursor:pointer;
 }
 .cursor-cross-hair{
@@ -75,7 +77,7 @@ canvas{
     border-radius: 40px;
     margin-right: 70px;
     width: 550px;
-    transition: transform 1s ease;
+    transition: transform 0.7s ease;
 }
 
 .arrow-left, .arrow-right{
