--- a/src/main/resources/static/css/module-styles.css
+++ b/src/main/resources/static/css/module-styles.css
@@ -34,7 +34,7 @@ canvas{
     user-select: none;
     padding: 5px 15px;
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.92);
+    background-color: black;
     border-radius: 5px;
     color: #f5f5f5bf;
     border: 3px solid #f5f5f5bf;
@@ -48,6 +48,10 @@ canvas{
 .selected-border{
     border: 3px solid #07a207 !important;
     color: #07a207 !important;
+}
+.red-border{
+    border: 3px solid #cc0b0b !important;
+    color: #cc0b0b !important;
 }
 #line, #back {
     position: relative;
