refactor: локальное отслеживание прогресса теперь осуществляется по id задания. refactor: удален boilerplate code из @Entity-s

--- a/src/main/resources/templates/task-template.html
+++ b/src/main/resources/templates/task-template.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div th:insert="~{header :: header}"></div>
-
+<span id="task_id" class="display-none" th:text="${task.getId()}"></span>
 <div class="app">
 
     <div class="left-block">
