--- a/src/main/resources/static/css/module-styles.css
+++ b/src/main/resources/static/css/module-styles.css
@@ -179,3 +179,33 @@ input[type='text']:focus{
     margin-top: 20px;
     margin-bottom: 20px;
 }
+.navigation-block{
+
+}
+
+.navigation-button{
+    text-decoration: none;
+    border-radius: 5px;
+    padding: 6px 9px;
+    margin: 2px;
+    background-color: rgba(0, 0, 0, 0.92);
+    font-size: 16px;
+    font-family: 'Helvetica', sans-serif;
+    color: #f5f5f5bf;
+    border: 2px solid #f5f5f5bf;
+    transition: padding-left 0.2s ease, padding-right 0.2s ease, padding-top 0.2s ease, padding-bottom 0.2s ease, border-color 1.3s ease, color 1.3s ease;
+}
+.navigation-button:hover{
+    padding: 9px 12px;
+    border-color: #003cff;
+    color: #003cff;
+}
+
+.navigation-tab-selected{
+    padding: 9px 12px;
+    border-color: #003cff;
+    color: #003cff;
+}
+.no-transition{
+    transition: none!important;
+}
