--- a/src/main/resources/static/css/module-styles.css
+++ b/src/main/resources/static/css/module-styles.css
@@ -1,7 +1,11 @@
 body{
     background-color: rgba(0, 0, 0, 0.92);
 }
-
+.left-block{
+    text-align: center;
+    margin-right: 10vh;
+    margin-left: 5vh;
+}
 .canvas-header {
     position: fixed;
     text-align: center;
@@ -74,14 +78,15 @@ canvas{
 
 .task-container{
     position: relative;
-    margin-left: 20px;
     display: inline-block;
     padding: 20px 40px;
     border: 2px solid #f5f5f5bf;
     border-radius: 40px;
-    margin-right: 70px;
     width: 550px;
     transition: transform 0.7s ease;
+    background-color: #0f0f0f;
+    margin-top: 20px;
+    text-align: left;
 }
 
 .arrow-left, .arrow-right{
@@ -180,32 +185,79 @@ input[type='text']:focus{
     margin-bottom: 20px;
 }
 .navigation-block{
-
+    display: inline-block;
+    border: 2px solid #f5f5f5bf;
+    background-color: #0f0f0f;
+    padding: 2px 20px;
+    border-radius: 15px;
+    width: 50vh;
 }
 
 .navigation-button{
     text-decoration: none;
     border-radius: 5px;
-    padding: 6px 9px;
-    margin: 2px;
+    padding: 8px 11px;
+    margin: 4px 5px;
     background-color: rgba(0, 0, 0, 0.92);
     font-size: 16px;
     font-family: 'Helvetica', sans-serif;
     color: #f5f5f5bf;
     border: 2px solid #f5f5f5bf;
-    transition: padding-left 0.2s ease, padding-right 0.2s ease, padding-top 0.2s ease, padding-bottom 0.2s ease, border-color 1.3s ease, color 1.3s ease;
+    transition: padding-left 0.3s ease, padding-right 0.3s ease, padding-top 0.3s ease, padding-bottom 0.3s ease, border-color 0.8s ease, color 0.8s ease;
 }
 .navigation-button:hover{
-    padding: 9px 12px;
+    padding: 11px 14px;
     border-color: #003cff;
     color: #003cff;
 }
 
 .navigation-tab-selected{
-    padding: 9px 12px;
+    padding: 11px 14px;
     border-color: #003cff;
     color: #003cff;
 }
 .no-transition{
     transition: none!important;
 }
+
+.navigation-buttons-wrapper{
+    padding: 15px 0;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+.no-smooth-behavior{
+    scroll-behavior: auto!important;
+}
+
+#scroll_left, #scroll_right{
+    display: inline-block;
+    background-color: #121212;
+    border: 2px solid #f5f5f5bf;
+    border-radius: 14px;
+    padding: 3px 10px;
+    padding-top: 8px;
+    transition: padding-left 0.4s, padding-right 0.4s, border-color 0.4s;
+}
+#scroll_left{
+    margin-right: 8px;
+}
+#scroll_right{
+    margin-left: 8px;
+}
+#scroll_left:hover, #scroll_right:hover{
+    border-color: #0134c2;
+    cursor: pointer;
+    padding: 3px 17px;
+    padding-top: 8px;
+}
+#scroll_left path, #scroll_right path{
+    transition: fill 0.4s;
+}
+#scroll_left:hover path, #scroll_right:hover path{
+    fill: #0134c2;
+}
+.navigation-block-wrapper{
+    display: inline-flex;
+    justify-content: center;
+}
+
