--- a/src/main/resources/static/css/module-styles.css
+++ b/src/main/resources/static/css/module-styles.css
@@ -2,6 +2,7 @@ body{
     background-color: rgba(0, 0, 0, 0.92);
 }
 .left-block{
+    position: fixed;
     text-align: center;
     margin-right: 10vh;
     margin-left: 5vh;
@@ -16,6 +17,7 @@ body{
     margin-left: 2vh;
 }
 .canvas-panel{
+    margin-left: auto;
     display: inline-block;
 }
 
@@ -264,7 +266,7 @@ input[type='text']:focus{
     fill: #0134c2;
 }
 .navigation-block-wrapper{
-    display: inline-flex;
+    display: flex;
     justify-content: center;
 }
 
