refactor: structure refactor + unlock some urls

--- a/src/main/resources/templates/all-tasks.html
+++ b/src/main/resources/templates/all-tasks.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/all-tasks.css">
-    <link rel="stylesheet" href="/css/header-styles.css">
+    <link rel="stylesheet" href="/css/closed-source/all-tasks.css">
+    <link rel="stylesheet" href="/css/closed-source/header-styles.css">
     <title>ЕГЭ-2024: задания, ответы, решения</title>
 </head>
 <body>
