--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -3,10 +3,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="/css/header-styles.css">
-  <link rel="stylesheet" href="/css/module-styles.css">
-  <script src="/javascript/whiteboard.js" defer></script>
-  <script src="/javascript/module_template_logic.js" defer></script>
+  <link rel="stylesheet" href="/css/closed-source/header-styles.css">
+  <link rel="stylesheet" href="/css/closed-source/module-styles.css">
+  <script src="/javascript/closed-source/whiteboard.js" defer></script>
+  <script src="/javascript/closed-source/module_template_logic.js" defer></script>
   <title th:text="'Задание ' + ${moduleNum} + ' ЕГЭ'"></title>
 </head>
 <body>
