--- a/src/main/resources/static/css/closed-source/module-styles.css
+++ b/src/main/resources/static/css/closed-source/module-styles.css
@@ -2,13 +2,14 @@ body{
     background-color: rgba(0, 0, 0, 0.92);
 }
 .left-block{
+    left: 3%;
+    top:11%;
     position: fixed;
     text-align: center;
-    margin-right: 10vh;
-    margin-left: 5vh;
 }
 .canvas-header {
     position: fixed;
+    top:12%;
     text-align: center;
     border: 3px dashed #f5f5f5bf;
     border-radius: 30px;
@@ -17,11 +18,18 @@ body{
     margin-left: 2vh;
 }
 .canvas-panel{
-    margin-left: auto;
-    display: inline-block;
+    overflow: auto;
+    position: fixed;
+    top: 11%;
+    right: 3%;
+    z-index: 2;
+    height: 85%;
+    border-radius: 50px;
 }
-
-canvas{
+.canvas-panel::-webkit-scrollbar {
+    width: 0;
+}
+#whiteboard{
     background-color: white;
     border-radius: 40px;
     margin-top: 10vh;
@@ -231,7 +239,6 @@ input[type='text']:focus{
     padding: 15px 0;
     overflow-x: auto;
     scroll-behavior: smooth;
-    scrollbar-width: none;
 }
 .navigation-buttons-wrapper::-webkit-scrollbar {
     width: 0;
@@ -248,7 +255,7 @@ input[type='text']:focus{
     border-radius: 14px;
     padding: 3px 10px;
     padding-top: 8px;
-    transition: padding-left 0.4s, padding-right 0.4s, border-color 0.4s;
+    transition: padding-left 0.4s, padding-right 0.4s, border-color 0.4s, opacity 0.4s;
 }
 #scroll_left{
     margin-right: 8px;
@@ -257,6 +264,7 @@ input[type='text']:focus{
     margin-left: 8px;
 }
 #scroll_left:hover, #scroll_right:hover{
+    opacity: 0.8;
     border-color: #0134c2;
     cursor: pointer;
     padding: 3px 17px;
@@ -273,3 +281,10 @@ input[type='text']:focus{
     justify-content: center;
 }
 
+#particles-js {
+    background-color: #000000;
+}
+
+.app-wrapper{
+   position: absolute;
+}
