--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -4,15 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/css/closed-source/header-styles.css">
-  <link rel="stylesheet" href="/css/closed-source/module-styles.css">
   <script src="/javascript/closed-source/whiteboard.js" defer></script>
   <script src="/javascript/closed-source/module_template_logic.js" defer></script>
   <title th:text="'Задание ' + ${moduleNum} + ' ЕГЭ'"></title>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}" />
+  <link rel="stylesheet" href="/css/closed-source/module-styles.css">
 </head>
 <body>
 <div th:insert="~{header :: header}"></div>
-<div class="app">
+<div id="particles-js"></div>
 
+<script th:src="@{/javascript/open-source/particles-lib/particles.js}"></script>
+<script th:src="@{/javascript/open-source/particles-lib/design-settings/calm_dark_design.js}"></script>
+<div class="app-wrapper">
   <div class="left-block">
     <div class="navigation-block-wrapper">
       <button id="scroll_left">
@@ -70,8 +74,7 @@
       </div>
     </div>
   </div>
-
-  <div class="canvas-panel">
+  <div id="canvas_panel" class="canvas-panel">
     <div id="canvas_header" class="canvas-header">
 
       <div id="pan" class="selected-border">
@@ -94,7 +97,7 @@
 
     </canvas>
   </div>
-</div>
 
+</div>
 </body>
 </html>
