--- a/src/main/resources/static/css/closed-source/module-styles.css
+++ b/src/main/resources/static/css/closed-source/module-styles.css
@@ -64,8 +64,16 @@ body{
     color: #07a207 !important;
 }
 .red-border{
-    border: 3px solid #cc0b0b !important;
+    border: 2px solid #cc0b0b !important;
     color: #cc0b0b !important;
+}
+.green-border{
+    border: 2px solid #07a207 !important;
+    color: #07a207 !important;
+}
+.yellow-border{
+    border: 2px solid #deb304 !important;
+    color: #deb304 !important;
 }
 #line, #back {
     position: relative;
@@ -93,7 +101,7 @@ body{
     border: 2px solid #f5f5f5bf;
     border-radius: 40px;
     width: 550px;
-    transition: transform 0.4s ease;
+    transition: transform 0.4s ease, border-bottom-color 0.8s ease;
     background-color: #0f0f0f;
     margin-top: 20px;
     text-align: left;
