feature: добавлена возможность копирования содержимого whiteboard как png в буфер обмена

--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -92,10 +92,15 @@
         <div class="description">Или правая кнопка мыши</div>
         Отмена
       </div>
+      <div id="copy">
+        Копировать
+      </div>
+<!--      <button id="copy">Скопировать</button>-->
     </div>
     <canvas id="whiteboard" width="700" height="600">
 
     </canvas>
+
   </div>
 
 </div>
