--- a/src/main/resources/static/css/closed-source/module-styles.css
+++ b/src/main/resources/static/css/closed-source/module-styles.css
@@ -3,19 +3,19 @@ body{
 }
 .left-block{
     left: 3%;
-    top:11%;
+    top:13%;
     position: fixed;
     text-align: center;
 }
 .canvas-header {
     position: fixed;
-    top:12%;
+    top:13%;
     text-align: center;
     border: 3px dashed #f5f5f5bf;
     border-radius: 30px;
-    padding: 10px 70px;
+    padding: 10px 10px;
     background-color: rgba(0, 0, 0, 0.1);
-    margin-left: 2vh;
+    margin-left: 4px;
 }
 .canvas-panel{
     overflow: auto;
@@ -32,19 +32,22 @@ body{
 #whiteboard{
     background-color: white;
     border-radius: 40px;
-    margin-top: 10vh;
+    margin-top: 12vh;
     cursor:pointer;
 }
 .cursor-cross-hair{
     cursor: crosshair;
 }
 
-#back, #pan, #clear, #rubber, #line, .send{
+#back, #pan, #clear, #rubber, #line, #copy, .send{
     font-size: 16px;
     font-family: 'Helvetica', sans-serif;
 }
+#copy{
+    margin-right: 10px;
+}
 
-#back, #pan, #clear, #rubber, #line, .send{
+#back, #pan, #clear, #rubber, #copy, #line, .send{
     user-select: none;
     padding: 5px 15px;
     display: inline-block;
@@ -54,7 +57,7 @@ body{
     border: 3px solid #f5f5f5bf;
     margin-left: 10px;
 }
-#back:hover, #pan:hover, #clear:hover, #rubber:hover, #line:hover, .send:hover{
+#back:hover, #pan:hover, #clear:hover, #rubber:hover, #line:hover, .send:hover, #copy:hover{
     cursor: pointer;
     opacity: 0.8;
 }
