--- a/src/main/resources/static/css/closed-source/module-styles.css
+++ b/src/main/resources/static/css/closed-source/module-styles.css
@@ -104,7 +104,7 @@ body{
     border: 2px solid #f5f5f5bf;
     border-radius: 40px;
     width: 550px;
-    transition: transform 0.4s ease, border-bottom-color 0.8s ease;
+    transition: transform 0.4s ease, border-color 0.8s ease;
     background-color: #0f0f0f;
     margin-top: 20px;
     text-align: left;
