--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -102,7 +102,14 @@
     </canvas>
 
   </div>
-
 </div>
+<div id="wrong_answer_comment" class="comment-block opacity-0">
+  <p class="comment-text">Пока что неправильно( , не сдавайся попробуй еще раз</p>
+</div>
+
+<div id="warning_comment" class="comment-block opacity-0">
+  <p class="comment-text">Если ты посмотришь ответ, то задание навсегда пометится красненьким, оно тебе надо? Если да, то нажми еще раз</p>
+</div>
+
 </body>
 </html>
