--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/css/closed-source/header-styles.css">
   <script src="/javascript/closed-source/whiteboard.js" defer></script>
   <script src="/javascript/closed-source/module_template_logic.js" defer></script>
-  <title th:text="'Задание ' + ${moduleNum} + ' ЕГЭ'"></title>
+  <title th:text="'Задание ' + ${moduleId} + ' ЕГЭ'"></title>
   <link rel="stylesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}" />
   <link rel="stylesheet" href="/css/closed-source/module-styles.css">
 </head>
