--- a/src/main/resources/templates/all-tasks.html
+++ b/src/main/resources/templates/all-tasks.html
@@ -29,5 +29,7 @@
         <div th:if="${taskNum==12}" class="part">Вторая часть - задания с развернутым ответом</div>
     </span>
 </div>
+
+<div class="height-holder"></div>
 </body>
 </html>
