--- a/src/main/resources/static/css/closed-source/theory-styles.css
+++ b/src/main/resources/static/css/closed-source/theory-styles.css
@@ -1,6 +1,3 @@
-body{
-    background-color: #121212;
-}
 table {
     color: #f5f5f5bf;
     width: 100%;
@@ -22,9 +19,6 @@ tr{
     background-color: rgba(255, 255, 255, 0.07);
     border-bottom: 1px solid #f5f5f5bf;
 }
-tr:first-child{
-    background-color: rgba(255, 255, 255, 0.04);
-}
 tr:last-child{
     border-bottom: none;
 }
@@ -34,15 +28,23 @@ tr:last-child{
 }
 
 .table-wrapper{
+    background-color: #121212;
     border: 1px solid #f5f5f5bf;
-    display: inline-block;
     overflow: hidden;
     border-radius: 20px;
     width: 55%;
+    margin: 0 auto;
+    margin-bottom: 3%;
+
+}
+tbody, thead, tr, td, th{
+    width: 100%;
 }
 .wrapper{
     margin-top: 100px;
     text-align: center;
+    position: absolute;
+    width: 100%;
 }
 .section{
     cursor: pointer;
@@ -67,4 +69,13 @@ tr:last-child{
     position: absolute;
     right: 4%;
     top: 35%;
+}
+
+#particles-js {
+    background-color: #000000;
+}
+
+.header{
+    background-color: rgba(255, 255, 255, 0.02) !important;
+    border-bottom: 1px solid #f5f5f5bf !important;
 }
