--- a/src/main/resources/templates/theory.html
+++ b/src/main/resources/templates/theory.html
@@ -1,50 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Теоритический раздел</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/theory-styles.css}" />
     <link rel="stylesheet" href="/css/closed-source/header-styles.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/theory-styles.css}"/>
 </head>
 <body>
 <script defer th:src="@{/javascript/closed-source/theory_logic.js}"></script>
 <div th:insert="~{header :: header}"></div>
-<div class="wrapper">
-    <div class="table-wrapper">
-        <table>
-            <tr>
-                <th>Задание №1</th>
-            </tr>
-            <tr class="section">
-                <td>
-                    <span>Название темы 1</span>
-                    <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30" height="20">
-                        <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
-                    </svg>
-                </td>
-            </tr>
-            <tr class="drop-down display-none">
-                <td>
-                    <span>Содержимое выкидного блока 1</span>
-                </td>
-            </tr>
-            <tr class="section">
-                <td>
-                    <span>Название темы 2</span>
-                    <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30" height="20">
-                        <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
-                    </svg>
-                </td>
 
+<div id="particles-js"></div>
+
+<script th:src="@{/javascript/open-source/particles-lib/particles.js}"></script>
+<script th:src="@{/javascript/open-source/particles-lib/design-settings/calm_dark_design.js}"></script>
+<div class="wrapper">
+    <div>
+        <table class="table-wrapper" th:each="m : ${moduleList}">
+            <thead>
+            <tr class="header">
+                <th>Задание №<span th:text="${m.id}"></span></th>
             </tr>
-            <tr class="drop-down display-none">
-                <td>
-                    <span>Содержимое выкидного блока 2</span>
-                </td>
-            </tr>
+            </thead>
+            <tbody th:each="section : ${m.sections}">
             <tr class="section">
                 <td>
-                    <span>Название темы 3</span>
+                    <span th:text="${section.name}"></span>
                     <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30" height="20">
                         <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
                     </svg>
@@ -52,22 +34,10 @@
             </tr>
             <tr class="drop-down display-none">
                 <td>
-                    <span>Содержимое выкидного блока 3</span>
+                    <span th:text="${section.text}"></span>
                 </td>
             </tr>
-            <tr class="section">
-                <td>
-                    <span>Название темы 4</span>
-                    <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30" height="20">
-                        <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
-                    </svg>
-                </td>
-            </tr>
-            <tr class="drop-down display-none">
-                <td>
-                    <span>Содержимое выкидного блока 4</span>
-                </td>
-            </tr>
+            </tbody>
         </table>
     </div>
 </div>
