--- a/src/main/resources/static/css/closed-source/theory-styles.css
+++ b/src/main/resources/static/css/closed-source/theory-styles.css
@@ -79,3 +79,56 @@ tbody, thead, tr, td, th{
     background-color: rgba(255, 255, 255, 0.02) !important;
     border-bottom: 1px solid #f5f5f5bf !important;
 }
+
+.navigation-panel{
+    position: fixed;
+    top: 14%;
+    left: 3%;
+    height: 72%;
+    padding: 20px;
+    background-color: #121212!important;
+    border: 3px solid #f5f5f5bf;
+    border-radius: 20px;
+    overflow-y: hidden;
+}
+.navigation-panel>.scroll-proxy>.navigation-button-wrapper>div{
+    font-size: 18px;
+    font-family: 'Helvetica', sans-serif;
+    background-color: rgba(255, 255, 255, 0.06);
+    cursor: pointer;
+    color: #f5f5f5bf;
+    padding: 10px 25px;
+    border-radius: 10px;
+    transition: background-color 0.6s ease, color 0.6s ease;
+    margin-bottom:  13px;
+
+}
+
+.navigation-panel>.scroll-proxy>.navigation-button-wrapper>div:hover{
+    background-color: rgba(255, 255, 255, 0.5)!important;
+    color: #121212;
+}
+.navigation-panel>.scroll-proxy>.navigation-button-wrapper>div:active{
+    opacity: 0.8;
+}
+.navigation-button-wrapper{
+    background-color: #121212!important;
+}
+
+.scroll-proxy::-webkit-scrollbar {
+    display: none;
+}
+.scroll-proxy{
+    height: 100%;
+
+    overflow-y: auto;
+}
+
+.scrolled-to-border{
+    border-left: 2px solid #f5f5f5bf !important;
+    border-right: 2px solid #f5f5f5bf !important;
+    border-top: 2px solid #f5f5f5bf !important;
+}
+.header{
+    transition: border-right-color 0.3s ease, border-left-color 0.3s ease, border-top-color 0.3s ease;
+}
