feature: текст задания модуля теперь отображается как html, то есть можно добавлять картинки в теорию

--- a/src/main/resources/templates/theory.html
+++ b/src/main/resources/templates/theory.html
@@ -34,7 +34,7 @@
             </tr>
             <tr class="drop-down display-none">
                 <td>
-                    <span th:text="${section.text}"></span>
+                    <span th:utext="${section.text}"></span>
                 </td>
             </tr>
             </tbody>
