design: дизайн и анимация раздела для выбора типа варианта егэ

--- a/src/main/resources/templates/choose-option-type-template.html
+++ b/src/main/resources/templates/choose-option-type-template.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ЕГЭ 2024</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/choose-option.css}" />
+    <script src="/javascript/closed-source/choose_option_logic.js" defer></script>
 </head>
-<body>
 
+<body>
+    <div class="cursor-glow display-none"></div>
+    <div id="panel" class="panel">
+        <div class="text-wrapper">
+            Сгенерировать вариант
+        </div>
+    </div>
 </body>
 </html>
