--- a/src/main/resources/static/css/closed-source/choose-option.css
+++ b/src/main/resources/static/css/closed-source/choose-option.css
@@ -3,14 +3,23 @@ body{
 }
 
 .panel {
+    user-select: none;
     position: fixed;
     width: 40%;
     height: 70%;
     left: 5%;
-    top: 10%;
+    top: 15%;
     background-color: rgba(255,255,255,0.05);
     border-radius: 40px;
-    transition: transform 1s ease, opacity 0.5s ease;
+    border: 3px solid rgba(255,255,255,0.05);
+    transition: transform 1s ease, background-color 0.6s ease, color 0.6s ease, opacity 0.3s ease;
+}
+.panel:hover{
+    background-color: rgba(255, 255, 255, 0.5)!important;
+    color: #121212;
+}
+.panel:active{
+    opacity: 0.8;
 }
 .transition-none{
     transition:none!important;
@@ -34,6 +43,7 @@ body{
     color: #f5f5f5bf;
     font-family: 'Helvetica', sans-serif;
     font-size: 38px;
+    z-index: 10;
 }
 .text-wrapper{
     display: flex;
@@ -42,3 +52,104 @@ body{
     height: 100%
 }
 
+.tutor-option-panel{
+    user-select: none;
+    text-align: center;
+    color: #f5f5f5bf;
+    font-family: 'Helvetica', sans-serif;
+    position: fixed;
+    width: 40%;
+    height: 70%;
+    right: 5%;
+    top: 15%;
+    background-color: rgba(255,255,255,0.05);
+    border-radius: 40px;
+    border: 3px solid rgba(255,255,255,0.05);
+    transition: width 1s ease, height 1s ease, border-color 0.3s ease;
+}
+.tutor-option-panel:hover{
+    width: 45%;
+    height: 75%;
+}
+input {
+    pointer-events: all;
+    outline: none;
+    border: none;
+    padding-left: 10px;
+    width: 40%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-size: 25px;
+    border-radius: 20px;
+    color: #f5f5f5bf;
+    background-color: rgba(255, 255, 255, 0.06);
+    transition: padding-right 1s ease, padding-left 1s ease
+    , padding-top 1s ease,padding-bottom 1s ease;
+}
+
+tr>td{
+    user-select: none;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 25px 40px;
+    background-color: rgba(255,255,255, 0.06);
+    transition: transform 0.1s ease, opacity 0.3s ease, padding-right 1s ease, padding-left 1s ease
+    , padding-top 1s ease,padding-bottom 1s ease;
+}
+tr>td:hover{
+    opacity: 0.8;
+}
+
+.td-extended{
+    padding: 30px 50px;
+}
+tr>td:active{
+    transform: translateY(3px);
+}
+#label{
+    display: inline-block;
+    margin-bottom: 3%;
+    margin-top: 3%;
+    font-size: 38px;
+}
+.interaction-wrapper{
+    margin-top: 5%;
+    text-align: center;
+}
+.numpad{
+    display: inline-block;
+}
+.input-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#find{
+    display: inline-block;
+    font-size: 18px;
+    font-family: 'Helvetica', sans-serif;
+    background-color: rgba(255, 255, 255, 0.06);
+    cursor: pointer;
+    color: #f5f5f5bf;
+    padding: 10px 25px;
+    border-radius: 10px;
+    margin-left: 3%;
+    transition: background-color 0.6s ease, color 0.6s ease, opacity 0.2s ease, padding-right 1s ease, padding-left 1s ease
+    , padding-top 1s ease,padding-bottom 1s ease;
+}
+#find:hover{
+    background-color: rgba(255, 255, 255, 0.5)!important;
+    color: #121212;
+}
+#find:active{
+    opacity: 0.8;
+}
+.input-extended{
+
+}
+.find-extended{
+    padding: 10px 30px!important;
+}
+.red-border{
+    border: 3px solid #cc0b0b !important;
+}
