--- a/src/main/resources/templates/choose-option-type-template.html
+++ b/src/main/resources/templates/choose-option-type-template.html
@@ -3,16 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <title>ЕГЭ 2024</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/choose-option.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/choose-option.css}"/>
+    <link rel="stylesheet" href="/css/closed-source/header-styles.css">
     <script src="/javascript/closed-source/choose_option_logic.js" defer></script>
 </head>
 
 <body>
-    <div class="cursor-glow display-none"></div>
-    <div id="panel" class="panel">
-        <div class="text-wrapper">
-            Сгенерировать вариант
+<div th:insert="~{header :: header}"></div>
+<div id="panel" class="panel">
+    <div class="text-wrapper">
+        Сгенерировать вариант
+    </div>
+</div>
+<div id="tutor-option-panel" class="tutor-option-panel">
+
+    <div id="label">
+        Вариант преподавателя
+    </div>
+    <br>
+    <div class="input-wrapper">
+        <input id="input-option" type="text">
+        <div id="find">
+            Найти
         </div>
     </div>
+
+    <div class="interaction-wrapper">
+        <table class="numpad">
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+            </tr>
+            <tr>
+                <td>0</td>
+                <td colspan="2">Стереть</td>
+            </tr>
+        </table>
+    </div>
+
+</div>
 </body>
 </html>
