--- a/src/main/resources/static/css/closed-source/all-tasks.css
+++ b/src/main/resources/static/css/closed-source/all-tasks.css
@@ -44,6 +44,7 @@ body{
     font-family: 'Helvetica', sans-serif;
     font-size: 26px;
     margin-left: 30px;
+    display: block;
 }
 .part+hr{
     border-color: #f5f5f5bf;
