--- a/src/main/resources/static/css/closed-source/choose-option.css
+++ b/src/main/resources/static/css/closed-source/choose-option.css
@@ -9,6 +9,7 @@ body{
     height: 70%;
     left: 5%;
     top: 15%;
+    text-decoration: none;
     background-color: rgba(255,255,255,0.05);
     border-radius: 40px;
     border: 3px solid rgba(255,255,255,0.05);
