--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -2,8 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${title}"></title>
+<!--    <title th:text="${title}"></title>-->
 </head>
+<script>
+    fetch(`/api/v1/client/options/autogenerate`, {
+        method: 'GET',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+    })
+        .then(response => response.json())
+        .then(data => {
+            console.log(data);
+        })
+        .catch((error) => {
+            console.error('Ошибка:', error);
+        });
+</script>
 <body>
 
 </body>
