--- a/src/main/resources/templates/theory.html
+++ b/src/main/resources/templates/theory.html
@@ -26,15 +26,12 @@
             <tbody th:each="section : ${m.sections}">
             <tr class="section">
                 <td>
-                    <span th:text="${section.name}"></span>
-                    <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30" height="20">
-                        <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
-                    </svg>
-                </td>
-            </tr>
-            <tr class="drop-down display-none">
-                <td>
-                    <span th:utext="${section.text}"></span>
+                    <a class="link" target="_blank" th:href="${section.link}">
+                        <span th:text="${section.name}"></span>
+                        <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30" height="20">
+                            <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
+                        </svg>
+                    </a>
                 </td>
             </tr>
             </tbody>
