--- a/src/main/resources/templates/theory.html
+++ b/src/main/resources/templates/theory.html
@@ -34,14 +34,21 @@
                     </thead>
                     <tbody>
                     <tr th:each="section : ${m.sections}" class="section">
-                        <td>
+                        <td style="position: relative">
                             <a class="link" target="_blank" th:href="${section.link}">
+                                <span style="display: none" th:text="${section.id}"></span>
                                 <span th:text="${section.name}"></span>
                                 <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30"
                                      height="20">
                                     <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
                                 </svg>
                             </a>
+                            <span class="cross">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" width="25"
+                                      height="25">
+                                    <path d="M 0 0 L 25 25 M 0 25 L 25 0" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
+                                </svg>
+                            </span>
                         </td>
                     </tr>
                     </tbody>
