--- a/src/main/resources/templates/theory.html
+++ b/src/main/resources/templates/theory.html
@@ -20,6 +20,7 @@
     <div>
         <div th:each="m : ${moduleList}" class="context">
             <span th:if="${isGod}" class="plus-wrapper">
+                <span style="display: none" th:text="${m.id}"></span>
                 <svg  class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30"
                       height="30">
                     <path d="M 0 15 L 30 15 M 15 0 L 15 30" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
@@ -36,17 +37,26 @@
                     <tr th:each="section : ${m.sections}" class="section">
                         <td style="position: relative">
                             <a class="link" target="_blank" th:href="${section.link}">
-                                <span style="display: none" th:text="${section.id}"></span>
                                 <span th:text="${section.name}"></span>
                                 <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30"
                                      height="20">
-                                    <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
+                                    <path d="M 1 1 L 15 19 L 29 1" stroke="white" fill="none" stroke-width="3"/>
                                 </svg>
                             </a>
                             <span class="cross">
+                                <span style="display: none" th:text="${section.id}"></span>
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" width="25"
                                       height="25">
-                                    <path d="M 0 0 L 25 25 M 0 25 L 25 0" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
+                                    <path d="M 0 0 L 25 25 M 0 25 L 25 0" stroke="white" fill="none" stroke-width="3"/>
+                                </svg>
+                            </span>
+                            <span class="edit">
+                                <span style="display: none" th:text="${section.id}"></span>
+                                <svg width="40" height="35">
+                                    <circle cx="20" cy="17.5" r="15" stroke="white" stroke-width="3" fill="none" />
+                                    <path d="M 1 14 L 5 19 L 10 15" stroke="white" fill="none" stroke-width="3"/>
+                                    <path d="M 1 19 L 4.5 23 L 10 19" stroke="orange" fill="none" stroke-width="3"/>
+                                    <path d="M 4.5 25 L 15 15" stroke="orange" fill="none" stroke-width="3"/>
                                 </svg>
                             </span>
                         </td>
